<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizz</string>
    <string name="action_settings">Settings</string>
    <string name="libQuestion">Who are you ?</string>
    <string name="libNom">Name :</string>
    <string name="libOK">START</string>
    <string name="debutMessage">Welcome</string>
    <string name="finMessage">Start Quizz !</string>
    <string name="title_activity_question1">Question 1</string>
    <string name="libQuestion1">La capitale du Japon est Kyoto ?</string>
    <string name="libVrai">TRUE</string>
    <string name="libFaux">FALSE</string>
    <string name="libSuivant">NEXT</string>
    <string name="libVerif">VERIFIER</string>
    <string name="title_activity_question2">Question 2</string>
    <string name="libQuestion2">Quelle est la capitale de l\'Argentine ?</string>
    <string name="title_activity_question3">Question 3</string>
	<string name="libQuestion3">Sur quel continent se trouve le Belize ?</string>
    <string name="title_activity_question4">Question 4</string>
    <string name="libQuestion4">Quelles couleurs sont présentes sur le drapeau de la Jamaïque ?</string>
    <string name="title_activity_resultats">Resultats</string>
    <string name="libVoirReponses">Voir vos réponses</string>

</resources>
