<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fond"
    android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dip"
		android:layout_marginBottom="10dip"
		android:text="@string/libQuestion1"
		android:textSize="20sp"
		android:textStyle="bold" />
    <RadioGroup
        android:id="@+id/grpReponse"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"	>

		<RadioButton
			android:id="@+id/rdbVrai"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/libVrai"
			android:textColor="#000000" />

		<RadioButton
			android:id="@+id/rdbFaux"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/libFaux"
			android:textColor="#000000" />
    </RadioGroup>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dip">
        <Button 
			android:id="@+id/boutonVerif"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/libVerif"
			android:layout_margin="25dip"/> 
		<Button 
			android:id="@+id/boutonSuiv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/libSuivant"
			android:layout_margin="25dip"/> 
    </LinearLayout>
 	<TextView
	    android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dip" />
</LinearLayout>

