<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fond"
    android:orientation="vertical">
	 <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dip" 
        android:src="@drawable/quizz" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dip"
		android:layout_marginBottom="10dip"
		android:text="@string/libQuestion"
		android:textColor="#000000"
		android:textSize="20dip"
		android:textStyle="bold" />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/libNom"
			android:textColor="#000000" />

		<EditText
			android:id="@+id/editNom"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:textColor="#000000" />
    </LinearLayout>
    <Button 
		    android:id="@+id/boutonOK"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:text="@string/libOK"
		    android:layout_margin="15dip"
	/> 
	<TextView
	    android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dip"
        android:textStyle="bold"
        android:layout_marginBottom="15dip"
    />
</LinearLayout>
