<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
     <ImageView
        android:id="@+id/imageQuizz" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal ="true"
        android:layout_marginTop="60dip" 
        android:src="@drawable/quizz" />
	<TextView
	    android:id="@+id/textQuest" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:textStyle="bold"
        android:layout_marginTop="30dip"
        android:layout_marginBottom="10dip"
        android:text="@string/libQuestion" 
        android:layout_below="@id/imageQuizz"
    />
    <TextView
        android:id="@+id/textNom" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/libNom"
	    android:layout_below="@id/textQuest"
    />
    <EditText 
	    android:id="@+id/editNom"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:inputType="text"
	    android:layout_below="@id/textQuest"
	    android:layout_toRightOf="@id/textNom"
	/>
    <Button 
		android:id="@+id/boutonOK"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/libOK"
		android:layout_margin="15dip"
		android:layout_alignParentRight="true"
		android:layout_below="@id/textNom"
	/> 
	<TextView
	    android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dip"
        android:textStyle="bold"
        android:layout_marginBottom="15dip"
        android:layout_below="@id/boutonOK"
    />
</RelativeLayout>
